remove update user, add update password
